--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav a:hover {
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25); 
 }
 
-/* card */
+/* card Section */
 .cards {
     display: flex;
     gap: 20px;
