--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,19 @@ section p {
     font-size: 20px;
     margin-bottom: 10px;
 }
+/* ===============================
+   Buttons
+   =============================== */
+   .my-button {
+    background-color: green;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    margin: 15px 0;
+    cursor: pointer;
+}
+
+.my-button:hover {
+    background-color: darkgreen;
+}
