--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,16 @@ section p {
 .my-button:hover {
     background-color: darkgreen;
 }
+/* ===============================
+   Contact Info Box
+   =============================== */
+   .contact-info {
+    background-color: lightyellow;
+    border: 3px dotted orange;
+    padding: 20px;
+    margin: 20px 0;
+}
+
+.contact-info p {
+    margin: 8px 0;
+}
