--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,14 @@ section p {
 .contact-info p {
     margin: 8px 0;
 }
+/* ===============================
+   Footer
+   =============================== */
+   footer {
+    background-color: gray;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    margin-top: 30px;
+    border-top: 4px solid darkgray;
+}
